# newghost

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
deploy/logrotate/: n0wss
deploy/systemd/: n0wss-client.service  n0wss-server.service
docs/: OPERATORS.md  development-plan.xml  knowledge-graph.xml  requirements.xml  technology.xml  verification-plan.xml
scripts/: deploy-live.sh  udp_probe.sh
src/: lib.rs  main.rs
src/auth/: mod.rs  mod.test.rs
src/cli/: mod.rs  mod.test.rs
src/config/: mod.rs  mod.test.rs
src/iroh_adapter/: mod.rs  mod.test.rs
src/obs/: burst_detector.test.rs  mod.rs  mod.test.rs
src/proxy_bridge/: mod.rs  mod.test.rs  udp_relay.rs  udp_relay.test.rs
src/session/: datagram_manager.rs  datagram_manager.test.rs  datagram_transport_selector.rs  datagram_transport_selector.test.rs  effect_handler.rs  effect_handler.test.rs  effects.rs  effects.test.rs  mod.rs  mod.test.rs  registry.rs  registry.test.rs  state.rs  state.test.rs  transport_selector.rs  transport_selector.test.rs  udp_registry.rs  udp_registry.test.rs
src/socks5/: mod.rs  mod.test.rs  reply_mapping.test.rs  udp_associate.rs  udp_associate.test.rs
src/tls/: mod.rs  mod.test.rs
src/transport/: adapter_contract.rs  datagram_contract.rs  datagram_contract.test.rs  mod.rs  stream.rs  task_tracker.rs
src/udp_origdst/: linux.rs  linux.test.rs  mod.rs  udp_origdst.test.rs
src/wss_gateway/: datagram.rs  datagram.test.rs  mod.rs  mod.test.rs
tests/: release_smoke.rs  udp_origdst_smoke.rs
