[package]
name = "n0wss"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
http = "1.3"
rustls-pemfile = "2.2"
rustls-pki-types = "1.13"
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.26"
tokio-tungstenite = "0.28"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }
url = "2.5"
x509-parser = "0.18"

[dev-dependencies]
rcgen = "0.14"
tempfile = "3.20"

[lints.clippy]
wildcard_enum_match_arm = "deny"
